1️⃣ V.1.2 🎉 Added React Helmet  ✅ | Add functionality and Styles 🎉

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>RJ1 Form - Rimbo - The new way to rent</title>
+    <title>New Tenancy - Rimbo - The new way to rent</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
