--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXPY_vd5EkWH4JBDkTHzHcDI1b418pi5Q&libraries=places"></script>
     <div id="root"></div>
   </body>
 </html>
